main-slider.begin

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -84,7 +84,24 @@ body {
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
 	flex: 1 1 auto;
+	&__intro-slider {
+		background: $lightBlueColor;
+	}
 }
 //===================================================================================================================================
 
+.slider-intro {
+	padding-top: 80px;
+	&__dots{
+
+	}
+
+	&__body {
+
+	}
+
+
+}
+
+//===================================================================================================================================
 //</ОСНОВНОЙ БЛОК>====================================================================================================
