--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -85,22 +85,93 @@ body {
 .page {
 	flex: 1 1 auto;
 	&__intro-slider {
-		background: $lightBlueColor;
+		background: #F4F7FF;
 	}
 }
 //===================================================================================================================================
-
 .slider-intro {
-	padding-top: 80px;
-	&__dots{
+	padding-top: 170px;
+	@include adaptiv-value('padding-top', 170, 100, 1);
+	@include adaptiv-value('padding-bottom', 30, 15, 1);
 
+	&__dots{
+		display: flex;
+		justify-content: center;
 	}
 
 	&__body {
 
 	}
 
+	&__slide {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 372px;
+		position: relative;
+		overflow: hidden;
+	}
+}
+.intro-slide {
+	&__body {
+		@include adaptiv-value('padding-bottom', 90, 25, 1);
+		padding-left: 15px;
+		padding-right: 15px;
+		max-width: 613px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	&__header-text {
+		pointer-events: none;
+		font-family: Roboto;
+		color: $blueColor;
+		font-weight: 500;
+		text-transform: uppercase;
+		font-size: 10px;
+		line-height: 120%;
+		margin-bottom: 1em;
+	}
 
+	&__title {
+		pointer-events: none;
+	}
+
+	&__text {
+		pointer-events: none;
+		@include adaptiv-value('font-size', 15, 11, 1);
+		font-family: Roboto;
+		line-height: 180%;
+		margin-bottom: 20/15 * 1em;
+		max-width: 502px;
+		text-align: center;
+	}
+
+	&__play {
+		cursor: pointer;
+		height: 52px;
+		width: 52px;
+		background: #fff;
+		border-radius: 50%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		transition: all 0.3s ease 0s;
+		color: $blueColor;
+		@media (any-hover: hover) {
+			&:hover {
+				background: $blueColor;
+				color: #fff;
+			}
+		}
+	}
+
+	&__link {
+		position: absolute;
+		font-size: 11px;
+		color: inherit;
+		line-height: 100%;
+	}
 }
 
 //===================================================================================================================================
