--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -298,3 +298,18 @@ body.ie {
 		color: #3D4F9F;
 	}
 }
+
+._header-text {
+	font-family: Roboto;
+	color: $blueColor;
+	font-weight: 500;
+	text-transform: uppercase;
+	font-size: 10px;
+	line-height: 120%;
+}
+._content-text {
+	@include adaptiv-value('font-size', 15, 11, 1);
+	font-family: Roboto;
+	line-height: 180%;
+	text-align: center;
+}
