--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -289,7 +289,7 @@ body.ie {
 ._title {
 	font-weight: 300;
 	@include adaptiv-value('font-size', 48, 30, 1);
-	margin-bottom: 28/48 * 1em;
+	margin-bottom: 28 / 48 * 1em;
 	font-size: 48px;
 	line-height: 120%;
 	text-align: center;
@@ -297,6 +297,13 @@ body.ie {
 		font-weight: 500;
 		color: #3D4F9F;
 	}
+}
+
+._title-blue {
+	@include adaptiv-value('font-size', 24, 16, 1);
+	font-weight: 500;
+	line-height: 30 / 24 * 100%;
+	color: #3D4F9F
 }
 
 ._header-text {
