--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -18,6 +18,8 @@
 
 //<BUTTONS (a.btn+tab)>====================================================================================================
 .btn {
+	border-radius: 2px;
+	font-weight: 700;
 	font-size: 13px;
 	line-height: 115%;
 	display: inline-flex;
