--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -104,6 +104,10 @@ body {
 	&__blog {
 		background: #F5F8FF;
 	}
+
+	&__quotes {
+		background: linear-gradient(180deg, #EAF0FF 0%, #F6F8FF 100%);
+	}
 }
 //===================================================================================================================================
 .slider-intro {
@@ -683,6 +687,111 @@ body {
 	@media (any-hover: hover) {
 		opacity: 0;
 		visibility: hidden;
+	}
+}
+//===================================================================================================================================
+.quotes {
+	@include adaptiv-value('padding-top', 110, 25, 1);
+	@include adaptiv-value('padding-bottom', 110, 25, 1);
+	&__container {
+		@media (min-width: $md2+px) {
+			display: flex;
+		}
+	}
+
+	&__content {
+		z-index: 5;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		flex: 0 0 473/990 * 100%;
+		padding-bottom: 20px;
+		@media (min-width: $md2+px) {
+			@include adaptiv-value('padding-right', 132, 1, 1);
+			align-items: flex-start;
+		}
+	}
+
+	&__slider {
+		flex: 1 1 auto;
+		min-width: 0;
+		align-self: flex-start;
+	}
+
+	&__header-text {
+		margin-bottom: 31/10 * 1em;
+	}
+
+	&__title {
+		@include adaptiv-value('font-size', 36, 25, 1);
+		line-height: 45/36 * 100%;
+		margin-bottom: 14/36 * 1em;
+	}
+
+	&__text {
+		max-width: 323px;
+		font-weight: 600;
+		text-align: center;
+		line-height: 22/12 * 100%;
+		@media (min-width: $md2+px) {
+			text-align: left;
+		}
+	}
+
+}
+.swiper-slide-active.slider-quotes__slide {
+	opacity: 1;
+}
+
+.slider-quotes {
+	position: relative;
+
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		height: 100%;
+		width: 100vw;
+		left: 0;
+		background: linear-gradient(180deg, #ECF1FD 0%, #f3f7ff 100%);
+		z-index: 2;
+		transform: translate(-100%, 0px);
+	}
+	&__body {
+		overflow: visible;
+		@include adaptiv-value('margin-bottom', 80, 40, 1);
+	}
+
+	&__slide {
+		transition: opacity 0.5s ease 0s;
+		opacity: 0.5;
+		position: relative;
+	}
+
+	&__text {
+		@include adaptiv-value('padding-top', 45, 20, 1);
+		@include adaptiv-value('padding-right', 70, 25, 1);
+		@include adaptiv-value('padding-bottom', 45, 40, 1);
+		@include adaptiv-value('padding-left', 70, 25, 1);
+		font-family: Roboto;
+		line-height: 23/14 * 100%;
+		padding: 45px 70px;
+		background-color: #fff;
+		color: #676F95;
+	}
+
+	&__dots {
+		justify-content: center;
+	}
+
+	&__photo {
+		position: absolute;
+		height: 62px;
+		width: 62px;
+		border-radius: 50%;
+		overflow: hidden;
+		left: 50%;
+		transform: translate(-50%, -50%);
 	}
 }
 //===================================================================================================================================
