--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,4 +1,12 @@
-footer{}
+.footer{
+  &__copyright {
+    font-weight: 500;
+    font-size: 12px;
+    color: #AEB8D0;
+    padding: 42px 0;
+    text-align: center;
+  }
+}
 //====================================================================================================
 
 //====================================================================================================
