--- a/css/style.css
+++ b/css/style.css
@@ -91,71 +91,71 @@
 }
 
 ._icon-bitbucket:before {
-  content: "";
+  content: "\e90c";
 }
 
 ._icon-watch:before {
-  content: "";
+  content: "\e90d";
 }
 
 ._icon-Facebook:before {
-  content: "";
+  content: "\e90e";
 }
 
 ._icon-atlassian:before {
-  content: "";
+  content: "\e90f";
 }
 
 ._icon-audi:before {
-  content: "";
+  content: "\e910";
 }
 
 ._icon-facebook:before {
-  content: "";
+  content: "\e900";
 }
 
 ._icon-telegram:before {
-  content: "";
+  content: "\e901";
 }
 
 ._icon-twitter:before {
-  content: "";
+  content: "\e902";
 }
 
 ._icon-math:before {
-  content: "";
+  content: "\e903";
 }
 
 ._icon-play:before {
-  content: "";
+  content: "\e904";
 }
 
 ._icon-label:before {
-  content: "";
+  content: "\e905";
 }
 
 ._icon-folder:before {
-  content: "";
+  content: "\e906";
 }
 
 ._icon-message:before {
-  content: "";
+  content: "\e907";
 }
 
 ._icon-download:before {
-  content: "";
+  content: "\e908";
 }
 
 ._icon-arrow:before {
-  content: "";
+  content: "\e909";
 }
 
 ._icon-search:before {
-  content: "";
+  content: "\e90a";
 }
 
 ._icon-arrow_expand:before {
-  content: "";
+  content: "\e90b";
 }
 
 * {
